fixed flickering of search field length

--- a/frontend/sass/_data-driven-onboarding.scss
+++ b/frontend/sass/_data-driven-onboarding.scss
@@ -2,8 +2,8 @@
     margin-top: 2.25em;
 }
 
-.level {
-    .jf-autocomplete-field {
+.level.jf-ddo-searchbar {
+    .field {
         flex: 1;
         padding-right: 1rem;
     }
